# life-rs

./: .gitignore  Cargo.toml  README.md  package.json  webdriver.json
pkg/: README.md  life_rs.d.ts  life_rs.js  life_rs_bg.js  life_rs_bg.wasm  life_rs_bg.wasm.d.ts  package.json
pkg-bundler/: life_rs_bg.wasm  package.json
pkg-nodejs/: README.md  life_rs.d.ts  life_rs.js  life_rs_bg.wasm  package.json
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
