[package]
name = "life-rs"
version = "0.1.0"
authors = ["Alex Les <alexlesismore@gmail.com>"]
edition = "2021"
description = "Conway's Game of Life implementation in Rust with WebAssembly support"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
fixedbitset = "0.5.6"
rand = "0.9"
getrandom = { version = "0.2", features = ["js"] }

# WASM-specific dependencies (only included when wasm feature is enabled)
wasm-bindgen = { version = "0.2.84", optional = true }
js-sys = { version = "0.3.69", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
